Add ROW_NUMBER window function support